# formacao-python-developer

./: .gitignore  Apresentation.md  Django.md  basic_commands.md  good-habits-with-python.md  venv.md
api-twitter/: README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
api-twitter/src/: connection.py  secrets.py  services.py
api-twitter/tests/: test.py
data_analysis/: Aula3_Pandas.ipynb  aula2_Estrutura_de_dados.ipynb  data_analysis.ipynb
data_estructure/: banking_system_challenge_2.py  desafio_1.py  informations.md
data_processing/: etl.md
docker/: docker-compose.yml
documentation/: indroduction.md
first_flask/: Flask.md  main.py
first_flask_restful/: habilidades.py  main.py  requirements.txt  task.md
fundamentals/: banking_system_challenge.py  indentation_and_blocs.py  input_and_output.py  operators_arithmetic.py  operators_assignment.py  operators_association.py  operators_comparison.py  operators_logic.py  operattors_identity.py  strings.py  structures_conditional.py  structures_repeating_while.py  task_1.py  task_2.py  task_3.py  type_converter.py  var_and_const.py
information_security_with_python/: 3.2_Gerador_Senhas.py  3.3_Comparador_hash.py  3.4_IpAddress.py  3.4_Threads_Corrida.py  4.2_Gerador_hashes_-_with_dictionary.py  4.3_Gerador_Wordlists_-_with_itertools.py  4.4_Web_Scraping.py  4.5_Web_Crawler.py  5.2_PhoneNumber.py  5.4_Ip_Externo_json.py  5.5_tkinter_Open_Browser+.py  client_tcp.py  client_udp.py  ping.py  server_udp.py
integration_with_sqlalchemy/: information.md
packages_python/: resume.md  setup.py
(+26 files in other folders)
