[tool.poetry]
name = "api-twitter"
version = "1.0.0"
description = "teste"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api_twitter"}]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.13.0"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
